# cmake-starter

./: .travis.yml  CMakeLists.txt  README.md  build.sh  index.js  package-lock.json  package.json  projectConfig.cmake  version.script
cmake/: cxxflags.cmake  library.cmake  utils.cmake
extProjects/gtest/: CMakeLists.txt
src/: CMakeLists.txt
src/api/cdraaloptions/: lib_export.h  options-c.h  options.h
src/app/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  lib_wrapper.cpp  options.cpp
src/tests/: CMakeLists.txt  test_lib.cpp
src/tests/public/: CMakeLists.txt  main.cpp
